style: fix menu on tablets

--- a/css/partials/theme/_header.scss
+++ b/css/partials/theme/_header.scss
@@ -249,6 +249,35 @@ header {
 }
 
 // Tablets and Desktops
+@media (min-width: 928px) {
+	.sticky {
+		&-no {
+			.menu {
+				&-main {
+					> li {
+						> a,
+						> button {
+							font-size: 1.125em;
+							padding: 0.8rem 1.8rem;
+						}
+					}
+				}
+
+				&-level {
+					&-three {
+						margin-left: 320px;
+					}
+				}
+			}
+
+			.categories {
+				max-width: 320px;
+			}
+		}
+	}
+}
+
+// Tablets and Desktops
 @media (min-width: 768px) {
 	.sticky {
 		&-yes {
@@ -389,9 +418,9 @@ header {
 
 						> a,
 						> button {
-							font-size: 1.125em;
+							font-size: 1.0625em;
 							line-height: 1.2;
-							padding: 0.8rem 1.8rem;
+							padding: 0.8rem 1rem;
 
 							&:hover {
 								text-decoration: none;
@@ -476,7 +505,7 @@ header {
 						bottom: 0;
 						color: initial;
 						left: 1rem;
-						margin-left: 320px;
+						margin-left: 280px;
 						opacity: 0;
 						overflow: hidden;
 						position: absolute;
@@ -500,7 +529,7 @@ header {
 
 			.categories {
 				border-right: 1px solid $border-color;
-				max-width: 320px;
+				max-width: 280px;
 				transition: all 0.4s $transition-effect;
 
 				.show {
